# manipulator

./: README.md
src/arm_simulation/: package.xml  setup.cfg  setup.py
src/arm_simulation/arm_simulation/: state_publisher.py
src/arm_simulation/config/: arm_config.rviz
src/robot_arm/: package.xml  setup.py
src/robot_arm/config/: config.rviz
src/robot_arm/launch/: display.launch.py
src/robot_arm/urdf/: base.xacro  gazebo.xacro  ign.gazebo.xacro  links_joints.xacro  robot_arm.urdf  robot_arm.xacro  robot_arm1.urdf  transmission.xacro
src/robot_arm/worlds/: robot_world.sdf
urdf/: arm_v1.urdf  arm_v2.urdf.xacro  robot_arm_v1.urdf
